[package]
name = "yaweread"
version = "0.1.0"
description = "A WeRead helper for English learning"
authors = ["you"]
edition = "2024"

[lib]
name = "yaweread_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
